--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,8 @@ body {
   color: var(--text-color);
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
