--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,7 @@ input[type="number"]::-webkit-outer-spin-button {
     @apply shadow-lg ring-1 backdrop-blur dark:bg-gray-800/90 bg-white/50 ring-white/10;
   }
 }
+
+.field-content {
+  field-sizing: content;
+}
